# PairwiseStitching

./: CMakeLists.txt  ImageRegistrationMethodTranslation.cxx  ImageRegistrationMethodTranslation.h  ImageRegistrationMethodTranslationTypeDef.h  ItkTypeDef.h  PairwiseStitching.cpp  PairwiseStitching.h  README.md  Stitching.cpp  Stitching.h  main.cpp
